# serverless-wasm-on-eks

./: .gitignore  Makefile  README.md
kubernetes/: istio.yaml  knative-webshop.yaml  runtimeclass.yaml  valkey-values.yaml
packer/: al2023_amd64.pkrvars.hcl  al2023_arm64.pkrvars.hcl  variables.pkr.hcl
packer/scripts/: wasm-runtimes.sh
packer/templates/: containerd-config.toml
terraform/: eks.tf  providers.tf  variables.tf
webshop/addToCart/: Cargo.toml  spin.toml
webshop/addToCart/src/: lib.rs
webshop/deleteFromCart/: Cargo.toml  spin.toml
webshop/deleteFromCart/src/: lib.rs
webshop/getCart/: Cargo.toml  spin.toml
webshop/getCart/src/: lib.rs
webshop/static/: spin.toml
webshop/static/assets/: cart.html  index.html  unicorns.html
webshop/static/assets/css/: main.css
