[package]
name = "get-cart"
description = "add items to cart microservice"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1" # Ensure this matches your Spin version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]